2006-01-05  Per Bothner  <per@bothner.com>

	* SlotGet.java: Use new Compilation.loadClasRef variant.

2006-01-04  Per Bothner  <per@bothner.com>

	* SlotGet.java (getField, compile): Pass the declaring-class of the
	field or method to isAccessible, not the possibly-derived class.
	* SlotSet.java (getField, compile): Likewise.

2005-12-05  Per Bothner  <per@bothner.com>

	* SlotGet.java (compile): Don't return compile-time-class for "class",
	unless isStatic.  Fixes Savannah bug #15151.

2005-12-03  Per Bothner  <per@bothner.com>

	* ClassMethodProc.java (CLASSTYPE_FOR): New constant.
	(makeExp): New method overloading.

2005-11-28  Per Bothner  <per@bothner.com>

	* SlotSet.java (compileSet):  Coerce argument to language-specific
	type, using new getLangTypeFor method. Use CheckedTarget.

	* SlotSet.java (compile): Fix name - for error message.

2005-11-25  Per Bothner  <per@bothner.com>

	* Invoke.java (checkKeywords): Take caller parameter.
	* SlotGet.java (getField): Use new caller parameter so we can look
	for method if Field isn't applicable.
	Simplify - type is always ClassType and name is always non-null.
	* SlotSet.java (getField): Likewise.

2005-11-23  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN): Don't need to check for staticLink here.
	Instead, assume extra parameter for ClassType.
	(inline): Can more inline constructors regardless of whether
	there is or will be a static link.

2005-11-22  Per Bothner  <per@bothner.com>

	* SlotGet.java (getField): Adjust for updated ClassType.getField,
	to request all fields, not just public|protected ones.
	* SlotSet.java (getField): Likewise.

2005-11-16  Per Bothner  <per@bothner.com>

	* SlotGet.java (apply2): Use WrappedException.

	* ClassMethods.java (getMethods): Pass caller's package, if known,
	as context to ClassType.getMethods.

2005-10-16  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods): Kludge to search Type.string_type
	rather than type.tostring_type for methods.
