@@ -1,3 +1,8 @@
+2006-01-11  Per Bothner  <per@bothner.com>
+
+	* SlotSet.java (getField): Simplify seraching for a setter method.
+	Specifically, look for any 1-argument method.
+
 2006-01-05  Per Bothner  <per@bothner.com>
 
 	* SlotGet.java: Use new Compilation.loadClasRef variant.
